# hactors

./: .gitignore  LICENSE  Makefile  README  README.md  hactors.cabal
Control/Concurrent/: Actor.hs
Control/Concurrent/Actor/: Debug.hs  Examples.hs  Tests.hs
doc/: Control-Concurrent-Actor-Debug.html  Control-Concurrent-Actor-Examples.html  Control-Concurrent-Actor-Tests.html  Control-Concurrent-Actor.html  doc-index.html  hactors.haddock  index-frames.html  index.html  mini_Control-Concurrent-Actor-Debug.html  mini_Control-Concurrent-Actor-Examples.html  mini_Control-Concurrent-Actor-Tests.html  mini_Control-Concurrent-Actor.html
