
name:                                   hactors
version:                                0.0.1
synopsis:                               Practical actors for Haskell.
category:                               Concurrency
description:

  Practical actors for Haskell.

  This library is about to implement the actor model on top of GHC's concurrency.
  Actors works as VM's lightweight processes and messages handled as asynchronous
  exceptions.

author:                                 Heka Treep
maintainer:                             Heka Treep <zena.treep@gmail.com>
homepage:                               https://github.com/treep/hactors
bug-reports:                            https://github.com/treep/hactors/issues
license:                                MIT
license-file:                           LICENSE

stability:                              Experimental
cabal-version:                          >= 1.6
build-type:                             Simple

extra-source-files:                     Makefile
                                        README.md
                                        Control/Concurrent/Actor/Examples.hs

source-repository                       head
  type:                                 git
  location:                             git://github.com/treep/hactors.git

library
  ghc-options:                          -Wall -fno-warn-orphans
  extensions:                           Rank2Types
                                        FlexibleInstances
                                        UndecidableInstances
  build-depends:                        base == 4.*
  exposed-modules:                      Control.Concurrent.Actor
