
name:                                   hactors
version:                                0.0.3
synopsis:                               Practical actors for Haskell.
category:                               Concurrency
description:

  Practical actors for Haskell.

  This library is about to implement the Erlang-like actor model on top of the
  GHC's concurrency.

author:                                 Heka Treep
maintainer:                             Heka Treep <zena.treep@gmail.com>
homepage:                               https://github.com/treep/hactors
bug-reports:                            https://github.com/treep/hactors/issues
license:                                MIT
license-file:                           LICENSE

stability:                              Experimental
cabal-version:                          >= 1.6
build-type:                             Simple

extra-source-files:                     Makefile

source-repository                       head
  type:                                 git
  location:                             git://github.com/treep/hactors.git

library
  ghc-options:                          -Wall
  build-depends:                        base == 4.*, stm == 2.2.*
  exposed-modules:                      Control.Concurrent.Actor
